@@ -18,6 +18,9 @@
 
 2008-04-10  Daniel Steffen  <das@users.sourceforge.net>
 
+	* unix/tclLoadDyld.c:		use RTLD_GLOBAL instead of RTLD_LOCAL.
+					[Bug 1961211]
+
 	* macosx/tclMacOSXNotify.c:	revise CoreFoundation notifier to allow
 					embedding into applications that
 					already have a CFRunLoop running and
